kubernetes/00-ingress-jeager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeager-server-ingress
  namespace: jeager
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: crqrswo.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /setup/jeager(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: jeager-jaeger-query
                port:
                  number: 80
