kubernetes/01-ingress-jeager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeager-server-ingress
  namespace: jeager
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: jeager.cqrs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jeager-jaeger-query
                port:
                  number: 80
